[package]
name = "nummy"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
publish = true
license-file = "LICENSE"
categories = ["mathematics", "science"]
keywords = ["math", "mathematics", "science", "physics"]
repository = "https://github.com/TriedWorks/nummy"
description = "yummy nummies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
fructose = "0.3.3"

[dependencies.decimal]
version = "2.1.0"
optional = true